--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>متجر أكوادرا العصري</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
-    <!-- Tailwind Config must be defined BEFORE the CDN script -->
     <script>
-      window.tailwindConfig = {
+      tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
@@ -28,11 +27,6 @@
         }
       }
     </script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      // Apply config
-      tailwind.config = window.tailwindConfig;
-    </script>
 </head>
 <body class="bg-gray-50 font-cairo text-gray-800 antialiased overflow-x-hidden">
 
@@ -40,12 +34,12 @@
     <nav class="fixed w-full z-50 bg-white/90 backdrop-blur-md shadow-sm transition-all duration-300">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
-                <div class="flex items-center cursor-pointer" onclick="window.app.navigate('home')">
+                <div class="flex items-center cursor-pointer" onclick="app.navigate('home')">
                     <span class="text-2xl font-bold text-brand-600 tracking-tighter">أكوادرا<span class="text-gray-900">ستور</span></span>
                 </div>
                 
                 <div class="flex items-center gap-4">
-                    <button onclick="window.app.toggleCart()" class="relative p-2 text-gray-600 hover:text-brand-600 transition-colors">
+                    <button onclick="app.toggleCart()" class="relative p-2 text-gray-600 hover:text-brand-600 transition-colors">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
                         </svg>
@@ -59,18 +53,18 @@
     <!-- Main Content Injection Point -->
     <main id="app" class="pt-24 pb-12 min-h-screen">
         <!-- Content renders here via JS -->
-        <div class="flex items-center justify-center h-64">
+        <div class="flex justify-center items-center h-64">
              <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-brand-600"></div>
         </div>
     </main>
 
     <!-- Cart Sidebar Overlay -->
     <div id="cart-overlay" class="fixed inset-0 z-[60] hidden">
-        <div class="absolute inset-0 bg-black/40 backdrop-blur-sm transition-opacity" onclick="window.app.toggleCart()"></div>
+        <div class="absolute inset-0 bg-black/40 backdrop-blur-sm transition-opacity" onclick="app.toggleCart()"></div>
         <div id="cart-drawer" class="absolute left-0 top-0 h-full w-full max-w-md bg-white shadow-2xl transform -translate-x-full transition-transform duration-300 flex flex-col">
             <div class="p-4 border-b flex justify-between items-center bg-gray-50">
                 <h2 class="text-lg font-bold">سلة التسوق</h2>
-                <button onclick="window.app.toggleCart()" class="p-2 hover:bg-gray-200 rounded-full">
+                <button onclick="app.toggleCart()" class="p-2 hover:bg-gray-200 rounded-full">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
                 </button>
             </div>
@@ -82,7 +76,7 @@
                     <span>المجموع:</span>
                     <span id="cart-total">0.00 ر.س</span>
                 </div>
-                <button onclick="window.app.goToCheckout()" class="w-full bg-brand-600 text-white py-3 rounded-xl font-bold hover:bg-brand-900 transition shadow-lg hover:shadow-xl transform active:scale-95">
+                <button onclick="app.goToCheckout()" class="w-full bg-brand-600 text-white py-3 rounded-xl font-bold hover:bg-brand-900 transition shadow-lg hover:shadow-xl transform active:scale-95">
                     إتمام الطلب
                 </button>
             </div>
