--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
     <!-- Main Content Injection Point -->
     <main id="app" class="pt-24 pb-12 min-h-screen">
         <!-- Content renders here via JS -->
-        <div class="flex justify-center items-center h-64">
-             <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-brand-600"></div>
-        </div>
     </main>
 
     <!-- Cart Sidebar Overlay -->
@@ -70,6 +67,10 @@
             </div>
             <div id="cart-items" class="flex-1 overflow-y-auto p-4 space-y-4">
                 <!-- Cart items go here -->
+                <div class="flex flex-col items-center justify-center h-full text-gray-400">
+                    <svg class="w-12 h-12 mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" /></svg>
+                    <p>السلة فارغة</p>
+                </div>
             </div>
             <div class="p-4 border-t bg-gray-50">
                 <div class="flex justify-between mb-4 font-bold text-lg">
