--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <nav class="fixed w-full z-50 bg-white/90 backdrop-blur-md shadow-sm transition-all duration-300">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
-                <div class="flex items-center cursor-pointer" onclick="app.navigate('home')">
+                <div class="flex items-center cursor-pointer" onclick="window.app.navigate('home')">
                     <span class="text-2xl font-bold text-brand-600 tracking-tighter">أكوادرا<span class="text-gray-900">ستور</span></span>
                 </div>
                 
                 <div class="flex items-center gap-4">
-                    <button onclick="app.toggleCart()" class="relative p-2 text-gray-600 hover:text-brand-600 transition-colors">
+                    <button onclick="window.app.toggleCart()" class="relative p-2 text-gray-600 hover:text-brand-600 transition-colors">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
                         </svg>
@@ -57,11 +57,11 @@
 
     <!-- Cart Sidebar Overlay -->
     <div id="cart-overlay" class="fixed inset-0 z-[60] hidden">
-        <div class="absolute inset-0 bg-black/40 backdrop-blur-sm transition-opacity" onclick="app.toggleCart()"></div>
+        <div class="absolute inset-0 bg-black/40 backdrop-blur-sm transition-opacity" onclick="window.app.toggleCart()"></div>
         <div id="cart-drawer" class="absolute left-0 top-0 h-full w-full max-w-md bg-white shadow-2xl transform -translate-x-full transition-transform duration-300 flex flex-col">
             <div class="p-4 border-b flex justify-between items-center bg-gray-50">
                 <h2 class="text-lg font-bold">سلة التسوق</h2>
-                <button onclick="app.toggleCart()" class="p-2 hover:bg-gray-200 rounded-full">
+                <button onclick="window.app.toggleCart()" class="p-2 hover:bg-gray-200 rounded-full">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
                 </button>
             </div>
@@ -77,7 +77,7 @@
                     <span>المجموع:</span>
                     <span id="cart-total">0.00 ر.س</span>
                 </div>
-                <button onclick="app.goToCheckout()" class="w-full bg-brand-600 text-white py-3 rounded-xl font-bold hover:bg-brand-900 transition shadow-lg hover:shadow-xl transform active:scale-95">
+                <button onclick="window.app.goToCheckout()" class="w-full bg-brand-600 text-white py-3 rounded-xl font-bold hover:bg-brand-900 transition shadow-lg hover:shadow-xl transform active:scale-95">
                     إتمام الطلب
                 </button>
             </div>
